// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreativeCommons /> Should render correctly 1`] = `
<div>
  <div
    class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
  >
    <div
      class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
    />
    <div
      class="sc-ipEyDJ jDBIzX creative-commonssyles__Inner-sc-qff226-2 jkifKu"
    >
      <h1
        class="sc-iBYQkv bnxJCD sc-bqWxrE exAZce"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-bcXHqe huaqIH"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-dkrFOg goDQJi"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="sc-pyfCe TBvmW"
          >
            Creative Commons BY-SA 3.0
          </span>
          <div
            class="sc-hLBbgP dPpdAU"
          >
            <svg
              class="sc-gswNZR hanptH sc-eDvSVe emXavc"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-dkrFOg goDQJi"
          href="/contact"
        >
          <span
            class="sc-pyfCe TBvmW"
          >
            contact me
          </span>
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<CreativeCommons /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx test-custom-className"
  >
    <div
      class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
    />
    <div
      class="sc-ipEyDJ jDBIzX creative-commonssyles__Inner-sc-qff226-2 jkifKu"
    >
      <h1
        class="sc-iBYQkv bnxJCD sc-bqWxrE exAZce"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="sc-bcXHqe huaqIH"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="sc-dkrFOg goDQJi"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="sc-pyfCe TBvmW"
          >
            Creative Commons BY-SA 3.0
          </span>
          <div
            class="sc-hLBbgP dPpdAU"
          >
            <svg
              class="sc-gswNZR hanptH sc-eDvSVe emXavc"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="sc-dkrFOg goDQJi"
          href="/contact"
        >
          <span
            class="sc-pyfCe TBvmW"
          >
            contact me
          </span>
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;
